java 17 syntactic migration