@@ -13,7 +13,6 @@ import org.telegram.bot.services.GigaChatMessageService;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -43,7 +42,7 @@ public class GigaChatMessageServiceImpl implements GigaChatMessageService {
                     .filter(chatGPTMessage -> chatGPTMessage.getId() != null)
                     .sorted(Comparator.comparingLong(GigaChatMessage::getId))
                     .limit(deletingCount)
-                    .collect(Collectors.toList());
+                    .toList();
             messages.removeAll(chatGPTMessagesForDelete);
             gigaChatMessageRepository.deleteAll(chatGPTMessagesForDelete);
         }
